# eris

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
framework/glad/include/glad/: gl.h
scripts/: setup.sh
src/: entry.js  main.cpp
src/core/: file_utils.cpp  file_utils.h
src/js/: main.js  vita-main.js
src/runtime/: runtime.cpp  runtime.h
src/runtime/bindings/: audio_bindings.cpp  canvas_bindings.cpp  gl_bindings.cpp  gl_platform.h  input_bindings.cpp
